# pamplejuice-base

./: .gitignore  .gitmodules  CMakeLists.txt
HoudiniiCompressor/: CMakeLists.txt
HoudiniiCompressor/include/: CompressorPluginEditor.h  CompressorPluginProcessor.h
HoudiniiCompressor/source/: CompressorPluginEditor.cpp  CompressorPluginProcessor.cpp
HoudiniiDCBlocker/: CMakeLists.txt
HoudiniiDCBlocker/include/: DCBlockerPluginEditor.h  DCBlockerPluginProcessor.h
HoudiniiDCBlocker/source/: DCBlockerPluginEditor.cpp  DCBlockerPluginProcessor.cpp
HoudiniiDistort/: CMakeLists.txt
HoudiniiDistort/include/: DistortPluginEditor.h  DistortPluginProcessor.h
HoudiniiDistort/source/: DistortPluginEditor.cpp  DistortPluginProcessor.cpp
HoudiniiGain/: CMakeLists.txt
HoudiniiGain/include/: GainPluginEditor.h  GainPluginProcessor.h
HoudiniiGain/source/: GainPluginEditor.cpp  GainPluginProcessor.cpp
HoudiniiLowPassFilter/: CMakeLists.txt  README.md
HoudiniiLowPassFilter/include/: LowPassFilterPluginEditor.h  LowPassFilterPluginProcessor.h
HoudiniiLowPassFilter/source/: LowPassFilterPluginEditor.cpp  LowPassFilterPluginProcessor.cpp
HoudiniiPluginTemplate/: CMakeLists.txt
HoudiniiPluginTemplate/include/: TemplatePluginEditor.h  TemplatePluginProcessor.h
HoudiniiPluginTemplate/source/: TemplatePluginEditor.cpp  TemplatePluginProcessor.cpp
HoudiniiSoftClipper/: CMakeLists.txt  README.md
HoudiniiSoftClipper/include/: SoftClipperPluginEditor.h  SoftClipperPluginProcessor.h
HoudiniiSoftClipper/source/: SoftClipperPluginEditor.cpp  SoftClipperPluginProcessor.cpp
HoudiniiStereoWidener/: CMakeLists.txt
HoudiniiStereoWidener/include/: StereoWidenerPluginEditor.h  StereoWidenerPluginProcessor.h
HoudiniiStereoWidener/source/: StereoWidenerPluginEditor.cpp  StereoWidenerPluginProcessor.cpp
Houdiniijuce/: CMakeLists.txt
Houdiniijuce/source/: PluginEditor.cpp  PluginProcessor.cpp
modules/houdinii_core/: CMakeLists.txt  houdinii_core.cpp  houdinii_core.h  juce_module_info
modules/houdinii_core/effects/: EffectSection.h
modules/houdinii_effects/: CMakeLists.txt  houdinii_effects.cpp  houdinii_effects.h  juce_module_info
modules/houdinii_effects/distortion/: SoftClipperSection.cpp  SoftClipperSection.h
modules/houdinii_effects/dynamics/: CompressorSection.cpp  CompressorSection.h
modules/houdinii_effects/filter/: DCBlockerSection.cpp  DCBlockerSection.h  LowPassFilterSection.cpp  LowPassFilterSection.h
modules/houdinii_effects/gain/: GainSection.cpp  GainSection.h
modules/houdinii_effects/modulation/: StereoWidenerSection.cpp  StereoWidenerSection.h
modules/houdinii_gui/: CMakeLists.txt  houdinii_gui.cpp  houdinii_gui.h  juce_module_info
modules/houdinii_gui/components/: CompressorSectionUI.cpp  CompressorSectionUI.h  DCBlockerSectionUI.cpp  DCBlockerSectionUI.h  EffectSectionUI.cpp  EffectSectionUI.h  GainSectionUI.cpp  GainSectionUI.h  LowPassFilterSectionUI.cpp  LowPassFilterSectionUI.h  MeterSectionUI.cpp  MeterSectionUI.h  SoftClipperSectionUI.cpp  SoftClipperSectionUI.h  StereoWidenerSectionUI.cpp  StereoWidenerSectionUI.h
modules/houdinii_gui/visualizers/: MeterSection.cpp  MeterSection.h  WaveShapeVisualizerComponent.cpp  WaveShapeVisualizerComponent.h
source/: DCBlockerSection.cpp  DCBlockerSection.h  DCBlockerSectionUI.cpp  DCBlockerSectionUI.h  EffectSection.h  EffectSectionUI.cpp  EffectSectionUI.h  GainSection.cpp  GainSection.h  GainSectionUI.cpp  GainSectionUI.h  LowPassFilterSection.h  LowPassFilterSectionUI.h  MeterSection.cpp  MeterSection.h  MeterSectionUI.cpp  MeterSectionUI.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StereoWidenerSection.h  StereoWidenerSectionUI.h
source/Common/: EffectSection.h  EffectSectionUI.cpp
source/Compressor/: CompressorSection.cpp  CompressorSection.h  CompressorSectionUI.cpp  CompressorSectionUI.h
source/DCBlocker/: DCBlockerSection.h  DCBlockerSectionUI.cpp  DCBlockerSectionUI.h
source/GainSection/: GainSection.h  GainSectionUI.cpp  GainSectionUI.h
source/LowPassFilter/: LowPassFilterSection.cpp  LowPassFilterSection.h  LowPassFilterSectionUI.cpp  LowPassFilterSectionUI.h
source/Meter/: MeterSection.h  MeterSectionUI.cpp  MeterSectionUI.h
source/SoftClipper/: SoftClipperSection.cpp  SoftClipperSection.h  SoftClipperSectionUI.cpp  SoftClipperSectionUI.h  WaveShapeVisualizerComponent.h
source/StereoWidener/: StereoWidenerSection.cpp  StereoWidenerSection.h  StereoWidenerSectionUI.cpp  StereoWidenerSectionUI.h
tests/: PluginBasics.cpp
